packages/moonstone/Panels/Header.less
// Header.less
//
@import "../styles/mixins.less";
@import "../styles/variables.less";
@import "../styles/text.less";
@import "../styles/skin.less";

.header {
	.border-box();
	border-top-width: @moon-header-border-top-width;
	border-top-style: solid;
	border-bottom-width: @moon-header-border-bottom-width;
	border-bottom-style: solid;
	position: relative;
	max-width: 100%;
	padding: 0;
	background-color: transparent;
	background-repeat: no-repeat;
	background-position: top left;
	margin: 0 @moon-spotlight-outset;

	// .titleAbove {
	// 	.moon-super-header-text();
	// }

	.title {
		.moon-header-text();
		margin: 0;
	}

	.titleBelow,
	.subTitleBelow {
		.moon-sub-header-text();
		margin: 0;
		.margin-start-end(0, @moon-spotlight-outset);
		line-height: 45px;
	}

	.subTitleBelow {
		.moon-header-sub-title-below();
	}

	.headerCell {
		max-width: 100%;
		min-width: 0;
	}

	.headerComponents {
		.remove-margin-on-edge-children();

		max-width: 100%;
		flex-wrap: nowrap;
		display: flex;
		align-items: flex-end;
	}

	&.compact,
	.headerRow {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
	}

	// Standard Header
	&.standard {
		height: @moon-header-height-medium;

		.title {
			line-height: @moon-medium-header-line-height;

			.enyo-locale-non-latin & {
				line-height: @moon-non-latin-medium-header-line-height;
			}
		}

		.headerRow {
			position: absolute;
			width: 100%;
			height: 75px;
			bottom: 12px;

			.headerCell {
				flex-grow: 1;
			}
		}

		.titleBelow,
		.subTitleBelow {
			line-height: 39px;
		}
	}

	// Compact Header
	&.compact {
		height: @moon-header-height-small;
		align-items: stretch;

		.title {
			line-height: @moon-small-header-line-height;
			font-size: @moon-small-header-font-size;
			margin-top: 30px;
			display: inline-block;

			.enyo-locale-non-latin & {
				line-height: @moon-non-latin-small-header-line-height;
			}
		}

		.titleBelow {
			display: inline;
			margin-left: (2 * @moon-spotlight-outset);
		}

		.headerComponents {
			margin: @moon-spotlight-outset 0;
		}
	}

	&:global(.debug) {
		@alpha: 10%;

		border: cornflowerblue dashed 1px;
		background-color: fade(cornflowerblue, @alpha);

		.title {
			border: lime dashed 1px;
			background-color: fade(lime, @alpha);
		}

		.headerCell {
			border: orange dashed 1px;
			background-color: fade(orange, @alpha);
		}

		.titleBelow {
			border: green dashed 1px;
			background-color: fade(green, @alpha);
		}

		.subTitleBelow {
			border: teal dashed 1px;
			background-color: fade(teal, @alpha);
		}

		.headerComponents {
			border: cyan dashed 1px;
			background-color: fade(cyan, @alpha);
		}
	}

	&.fullBleed {
		border-top-width: 0;
	}

	// Skin colors
	.applySkins({
		color: @moon-header-text-color;
		border-top-color: @moon-header-border-color;
		border-bottom-color: @moon-header-bottom-border-color;

		&.fullBleed {
			border-color: @moon-header-full-bleed-border-color;
			color: @moon-header-full-bleed-text-color;

			.titleBelow,
			.subTitleBelow {
				color: @moon-header-title-below-full-bleed-text-color;
			}
		}
	});
}

:global(.hasCloseButton) .header {
	.padding-start-end(0, @moon-spotlight-outset + @moon-icon-button-small-size + @moon-spotlight-outset);
}

